<resources>
    <string name="app_name">Final Score</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="field_name_confirm">Field Name :  %1$s</string>
    <string name="timing_confirm">Timings : %1$s to %2$s</string>
    <string name="cost_confirm">Cost : Rs %1$d</string>
    <string name="field_no_confirm">Field Number : %1$s</string>
    <string name="booking_field_info">%1$s - %2$s</string>
    <string name="booking_timings">%1$d:00 to %2$d:00</string>
    <string name="booking_cost">Rs. %1$d</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="cost_per_hour">Cost/hour : Rs %1$d</string>
    <string name="dob">DOB: %1$s at %2$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
