<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:clickable="true"
    android:elevation="10dp"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center|center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:layout_marginLeft="4dp"
            android:src="@mipmap/ic_check_circle_black_24dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:padding="4dp"
            android:gravity="center_vertical|start">

            <TextView
                android:id="@+id/field_name_no_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_field_info"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/timings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/field_name_no_tv"
                android:paddingTop="4dp"
                android:text="@string/booking_timings"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cost_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timings_tv"
                android:text="@string/booking_cost"
                android:textColor="@color/colorAccent"
                android:paddingTop="4dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cost_tv"
                android:text="@string/dob"
                android:textColor="@color/colorAccent"
                android:paddingTop="4dp"
                android:textSize="12sp" />
        </RelativeLayout>
        <TextView
            android:id="@+id/status_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="CANCEL"
            android:textStyle="bold"
            android:elevation="3dp"
            android:clickable="true"
            android:gravity="center|center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            android:layout_weight="1.5"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
