<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center"
        android:elevation="10dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="2dp">
        <LinearLayout
            android:id="@+id/activity_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="Booking Details"/>
                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="0.75dp"
                    android:background="#BDBDBD"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/field_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:text="@string/field_name_confirm"/>
                <TextView
                    android:id="@+id/field_no_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:text="@string/field_no_confirm"/>
                <TextView
                    android:id="@+id/timings_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:text="@string/timing_confirm"/>
                <TextView
                    android:id="@+id/cost_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:text="@string/cost_confirm"/>
                <Button
                    android:id="@+id/confirm_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:background="@drawable/signup_style"
                    android:text="Confirm "/>
                <ProgressBar
                    android:id="@+id/confirm_progress"
                    android:layout_width="match_parent"
                    android:theme="@style/CircularProgress"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:foregroundGravity="center"/>
                <!--<TextView-->
                    <!--android:id="@+id/or_tv"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center"-->
                    <!--android:textSize="18sp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:text="OR"/>-->
                <!--<Button-->
                    <!--android:id="@+id/confirm_pay_btn"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center"-->
                    <!--android:textSize="18sp"-->
                    <!--android:background="@drawable/signup_style"-->
                    <!--android:text="Confirm and Pay"/>-->

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>